# scipylatam-webpage-2021

./: .gitignore  404.html  CNAME  LICENSE  README.md  google-analytics.template  index.html  lektorproject.template  pyproject.toml  scipy-latin-america-2021.lektorproject
.github/workflows/: lektor-deployment.yml
cdc/: index.html
configs/: google-analytics.ini
content/: contents+en.lr  contents+es.lr  contents.lr
content/404.html/: contents.lr
content/cdc/: contents+en.lr  contents+es.lr  contents.lr
content/faq/: contents+en.lr  contents+es.lr  contents.lr
content/forms/: contents.lr
content/grade-programacao/: contents+es.lr  (+1 more)
databags/: about.ini  countdown.ini  country.ini  menu.ini  modal.ini  schedule.ini  talks.ini  translate.ini
en/: 404.html  index.html
es/: 404.html  index.html
faq/: index.html
flowblocks/: social.ini
forms/: index.html
grade-programacao/: index.html
models/: cdc.ini  conference.ini  faq-question.ini  faq.ini  form.ini  forms.ini  grade-programacao.ini  keynote.ini  keynotes.ini  page.ini  palestrante.ini  palestrantes.ini  track.ini
templates/: 404.html  cdc.html  error.html  faq.html  form.html  forms.html  grade-programacao.html  grade.html  layout.html  menu-static.html  menu.html  page.html  section-about.html  section-cdc.html  section-contact.html  section-countdown.html  section-faq.html  section-footer.html  section-header.html  section-keynotes.html  section-palestrantes-carousel.html  section-palestrantes.html  section-subscription.html  section-talks.html
webpack/: package.json  webpack.config.js
(+138 files in other folders)
